fixed white border on right on iPhone

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -140,7 +140,7 @@ img.headshot {
 
 .about {
   width: 100%;
-  height: 100%;
+  height: auto;
   color: #000000;
   background-color: #FFFFFF;
   padding-top: 50px;
@@ -301,6 +301,14 @@ and (orientation : portrait) {
   /*position: absolute;*/
   width: 500px;
   margin-left: -200px;
+  }
+
+  html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
   }
 
   .headshot-wrap {
